--- a/src/app/Components/tabla-lista/tabla-lista.component.html
+++ b/src/app/Components/tabla-lista/tabla-lista.component.html
@@ -4,10 +4,10 @@
     <div class="card p-2" *ngIf="item.value.nombre">
       <div class="card-header bg-white lista_contenido p-0 row" id="headingOne" data-toggle="collapse"
         attr.data-target="#collapse_{{i}}" aria-expanded="false" aria-controls="collapseOne">
-        <h3 class="btn collapsed col-md-6 text-left pl-4">
+        <h3 class="btn collapsed col-md-6 text-left pl-4 py-sm-0">
           {{ item.value.nombre }}
         </h3>
-        <div class="lista_contenido_valores col-md-4">
+        <div class="lista_contenido_valores col-md-4 py-sm-0">
           <p class="text-primary m-0">{{ item.value.valor | number: '1.0-0' }}</p>
           <span class="text-uppercase">{{ item.value.unidad_medida }}</span>
         </div>
@@ -20,13 +20,14 @@
 
       <div id="collapse_{{i}}" class="collapse bg-light p-4 lista_contenido_colapsable" aria-labelledby="headingOne"
         data-parent="#accordionExample">
-        <div class="card-body lista_contenido_collapsable p-0" *ngFor="let itemAux of item.value | keyvalue">
-          <div class="">
-            <h3>Fecha</h3>
-            <p>{{ item.value.fecha | date : 'shortDate' }}</p>
+        <div class="card-body p-0" *ngFor="let itemAux of item.value | keyvalue">
+          <div class="d-flex">
+            <p class="font-weight-bold text-secondary mb-0 text-secondary">Fecha</p>
+            <p class="mb-1 text-secondary ml-1">{{ item.value.fecha | date : 'shortDate' }}</p>
           </div>
-          <div class="lista_contenido_desplegado">
-            <p>{{ item.value.valor }}</p>
+          <div class="lista_contenido_desplegado d-flex">
+            <p class="font-weight-bold mb-0 text-secondary">{{ item.value.unidad_medida }}</p>
+            <p class="mb-1 text-secondary ml-1">{{ item.value.valor }}</p>
           </div>
         </div>
       </div>
