--- a/src/app/Components/tabla-lista/tabla-lista.component.scss
+++ b/src/app/Components/tabla-lista/tabla-lista.component.scss
@@ -51,3 +51,36 @@
 
   }
 }
+
+@media (max-width: 767.98px) { 
+  .lista_contenedor {
+    .lista_contenido {
+      text-align: center;
+      h3 {
+        text-align: center !important;
+        padding: 0 !important;
+        margin-bottom: 0.5rem;
+        width: 80%;
+        margin: auto;
+      }
+
+      div {
+        padding: 0;
+      }
+
+      .lista_contenido_mas {
+        display: none;
+      }
+    }
+  
+    .lista_contenido_colapsable {
+      flex-direction: column;
+      align-items: center;
+
+      .card-body {
+        margin-bottom: 1rem;
+        line-height: normal;
+      }
+    }
+  }
+ }
